added paragraph and styling

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 <body>
     <h1>Virker</h1>
 
+    <h2>first commit</h2>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, voluptatem? Consequatur, est blanditiis ipsam,
+        voluptas doloremque iusto provident sit atque similique sequi quaerat officia cumque unde animi. Sit, quod quam!
+    </p>
+
+
 </body>
 
 </html>
