tilføjer endnu en paragraf samt ændring af farve

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         voluptas doloremque iusto provident sit atque similique sequi quaerat officia cumque unde animi. Sit, quod quam!
     </p>
 
-
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel veniam inventore iste deleniti sed odio mollitia est
+        minima voluptatum dolorem at vero numquam explicabo, nemo ab vitae, corrupti harum enim!</p>
 </body>
 
 </html>
